--- a/ConsoleAppDotNetFramework/ConsoleAppDotNetFramework.csproj
+++ b/ConsoleAppDotNetFramework/ConsoleAppDotNetFramework.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{7D9282F2-6F76-498F-9DA8-8455FCC713CE}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>ConsoleApp2</RootNamespace>
-    <AssemblyName>ConsoleApp2</AssemblyName>
+    <RootNamespace>ConsoleAppDotNetFramework</RootNamespace>
+    <AssemblyName>ConsoleAppDotNetFramework</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
